--- a/package.json
+++ b/package.json
@@ -12,6 +12,16 @@
     "express": "~4.14.1",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "mongodb": "*",
+    "mongoose": "*",
+    "connect-flash":"*",
+    "express-validator":"*",
+    "express-session": "*",
+    "express-messages":"*",
+    "passport":"*",
+    "passport-local":"*",
+    "passport-http":"*",
+    "multer":"*"
   }
 }
