--- a/package.json
+++ b/package.json
@@ -6,22 +6,23 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "~1.16.0",
+    "connect-flash": "*",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "express": "~4.14.1",
+    "express-messages": "*",
+    "express-session": "*",
+    "express-validator": "*",
     "jade": "~1.11.0",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2",
     "mongodb": "*",
     "mongoose": "*",
-    "connect-flash":"*",
-    "express-validator":"*",
-    "express-session": "*",
-    "express-messages":"*",
-    "passport":"*",
-    "passport-local":"*",
-    "passport-http":"*",
-    "multer":"*"
+    "morgan": "~1.7.0",
+    "multer": "*",
+    "passport": "*",
+    "passport-http": "*",
+    "passport-local": "*",
+    "serve-favicon": "~2.3.2"
   }
 }
